# NexusUI

./: .gitignore  dev-start.sh  package.json
Custombackend/: README.md  requirements.txt
Custombackend/app/: __init__.py  config copy.py  (+10 more)
docker/: start.sh
docs/: tool-system-architecture.md
nexus-backend/: .env.example  config.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
nexus-backend/app/: main.py
nexus-backend/app/api/: router.py
nexus-backend/app/api/routes/: __init__.py  assets.py  chat.py  conversations.py  simulation.py  zones.py
nexus-backend/app/core/: __init__.py  config.py  db.py  db_sync.py  seed.py
nexus-backend/app/models/: __init__.py  alert.py  asset.py  conversation.py  task.py  zone.py
nexus-backend/app/schemas/: __init__.py  asset.py  chat.py  conversation.py  zone.py
nexus-backend/app/services/: __init__.py  llm.py  simulation.py  tool_registry.py  tools.py
nexus-backend/app/services/tool_handlers/: __init__.py  _geo.py  asset_tools.py  assignment_tools.py  chart_tools.py  command_tools.py  map_tools.py  plan_tools.py  route_tools.py  sensor_tools.py  task_tools.py  threat_tools.py  track_tools.py  weather_tools.py
nexus-backend/config/: simulation.yaml  tools.yaml
nexus-backend/routers/: chat.py  conversations.py
nexus-backend/services/: llm.py  tools.py
nexus-backend/tests/: test_app_structure.py  test_tools.py
nexus-ui/: .env.example  .env.local  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
tests/: test_domain_alignment.py  test_hydration_safety.py
(+402 files in other folders)
